# doc-reading-agent-demo

./: .env  TODO.md  main.py  pyproject.toml
src/: settings.py  test.py  标题提取方案设计.md
src/POC/: jina_test.ipynb  test.ipynb
src/code/: main.py  structure_parser.py  title_extractor.py
src/code/Tools/: page_indexing_tool.py  visual_reader_tool.py
src/code/data_base/: database.py
src/code/embedding/: embedding_model.py
src/code/rag/: database.py
src/code/rag_workflow/: rag.py
src/code/rerank/: reranker.py
src/code/visual_reasoner/: model.py
tests/: test_visual_reader_tool.py
示例数据/: test.docx
